# dual-obsidian-client

./: .gitignore  CONTRIBUTING.md  README.md  Snapshot.txt  conversational_wrapper.py  core.py  package-lock.json  package.json  persona.py  probes.json  qg_pipeline.py  requirements.txt  rollup.config.js  run_clm.py  server.py  server.spec  tsconfig.json  util.py
.github/: FUNDING.yml
backend/: Cargo.toml  cache.pickle  core.py  server.py
backend/src/: main.rs  nlp.rs  sbert_test.rs
experimental-recipes/: Complete recipe.md  Concept handle recipe.md  Question answering recipe.md  Summarize recipe.md  Title recipe.md  Writing prompt recipe.md
file-structure-replica/: Adaptive physiology reflects cognitive processes.md  Agitation can be weaponized.md  Attention is a competition.md  Automated fabrication supports prosumers.md  B-rolls induce diffused mental states.md  Batching in machine learning is like baking.md  Belief in memetic engineering approximates placebo.md  Beliefs are gates into the body's biochemistry.md  Body seeks homeostasis.md  Brain is like hardware, mind is like software.md  Brains are like cities.md  Brains code relative object positions.md  Categorical perception translates in a blindspot for other taxonomies.md  Concept learning is few-shot scaffolding supported by working memory.md  Concepts are like rooms.md  Deception can be prosocial.md  Drawing surfaces extend visuospatial sketchpad.md  Electromyography enables covert speech recognition.md  (+39 more)
rust-backend/: Cargo.toml
rust-backend/src/: main.rs  nlp.rs  sbert_test.rs  server.rs  utils.rs
(+922 files in other folders)
