[package]
name = "rust-backend"
version = "0.1.0"
authors = ["paulbricman <paulbricman@protonmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.118"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
tch = "0.5.0"
sbert = { git = "https://github.com/paulbricman/rust-sbert/" }
anyhow = "1.0.40"
once_cell = "1.7"
tokio = { version = "1.6.1", features = ["full"] } 
futures = "0.3.15"
warp = "0.3.1"
rust_tokenizers = "~6.2.3"
regex = "1"
itertools = "0.10.1"
ngt = "0.4.0"
"pickledb" = "0.4.1"