[package]
name = "rust-backend"
version = "0.1.0"
authors = ["paulbricman <paulbricman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
anyhow = "1.0.40"
tch = "0.4.1"