[package]
name = "rust-backend"
version = "0.1.0"
authors = ["paulbricman <paulbricman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
anyhow = "1.0.40"
tch = "0.4.1"
once_cell = "1.7"
tokio = { version = "1.6.1", features = ["full"] } 
futures = "0.3.15"
warp = "0.3.1"
rust_tokenizers = "~6.2.3"
regex = "1"